--- a/noaa_ai_workshop/IntroNotebooks/05-Challenge.ipynb
+++ b/noaa_ai_workshop/IntroNotebooks/05-Challenge.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,11 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = \"C:/Users/guzma/OneDrive/Documents/TEC/S6/MA2007/Reto/noaa_ai_workshop/IntroNotebooks/uke_eggedal_data_challenge.pkl\"\n",
+    "file = \"/Users/alvaro/Documents/6TO SEMESTRE/Topologia/RETO RETO/Reto backup/Untitled 08-28-50-727/noaa_ai_workshop/IntroNotebooks/uke_eggedal_data_challenge.pkl\" #para correr en mac\n",
+    "\n",
+    "#file = \"C:/Users/guzma/OneDrive/Documents/TEC/S6/MA2007/Reto/noaa_ai_workshop/IntroNotebooks/uke_eggedal_data_challenge.pkl\"\n",
     "df = pd.read_pickle(file)"
    ]
   },
@@ -38,241 +40,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(df.keys())\n",
-    "df1 = pd.DataFrame(df['flow'])\n",
-    "df1.columns = ['flow']\n",
-    "df2 = pd.DataFrame(df['obs_tas'])\n",
-    "df2.columns = ['tas_0', 'tas_1', 'tas_2', 'tas_3', 'tas_4', 'tas_5', 'tas_6', 'tas_7', 'tas_8']\n",
-    "df3 = pd.DataFrame(df['flow_dates'])\n",
-    "# df4 = pd.DataFrame(df['obs_lon_lat']) # ignore\n",
-    "df5 = pd.DataFrame(df['obs_pr'])\n",
-    "df5.columns = ['pr_0', 'pr_1', 'pr_2', 'pr_3', 'pr_4', 'pr_5', 'pr_6', 'pr_7', 'pr_8']\n",
-    "df6 = pd.DataFrame(df['obs_dates'])\n",
-    "df6.columns = ['dates']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.concat([df1, df2], axis=1, join='inner')\n",
-    "data = pd.concat([data, df5], axis=1, join='inner')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.index = df3.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>flow</th>\n",
-       "      <th>tas_0</th>\n",
-       "      <th>tas_1</th>\n",
-       "      <th>tas_2</th>\n",
-       "      <th>tas_3</th>\n",
-       "      <th>tas_4</th>\n",
-       "      <th>tas_5</th>\n",
-       "      <th>tas_6</th>\n",
-       "      <th>tas_7</th>\n",
-       "      <th>tas_8</th>\n",
-       "      <th>pr_0</th>\n",
-       "      <th>pr_1</th>\n",
-       "      <th>pr_2</th>\n",
-       "      <th>pr_3</th>\n",
-       "      <th>pr_4</th>\n",
-       "      <th>pr_5</th>\n",
-       "      <th>pr_6</th>\n",
-       "      <th>pr_7</th>\n",
-       "      <th>pr_8</th>\n",
-       "      <th>obs_dates</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1958-01-04</th>\n",
-       "      <td>1.723781</td>\n",
-       "      <td>-10.600000</td>\n",
-       "      <td>-9.7</td>\n",
-       "      <td>-6.7</td>\n",
-       "      <td>-8.800000</td>\n",
-       "      <td>-8.900000</td>\n",
-       "      <td>-7.500000</td>\n",
-       "      <td>-8.1</td>\n",
-       "      <td>-6.5</td>\n",
-       "      <td>-5.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>1958-01-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-01-05</th>\n",
-       "      <td>0.960882</td>\n",
-       "      <td>-20.500000</td>\n",
-       "      <td>-19.1</td>\n",
-       "      <td>-12.0</td>\n",
-       "      <td>-17.700001</td>\n",
-       "      <td>-17.700001</td>\n",
-       "      <td>-13.100000</td>\n",
-       "      <td>-15.5</td>\n",
-       "      <td>-11.8</td>\n",
-       "      <td>-9.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>1958-01-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-01-06</th>\n",
-       "      <td>0.001000</td>\n",
-       "      <td>-23.600000</td>\n",
-       "      <td>-22.5</td>\n",
-       "      <td>-15.1</td>\n",
-       "      <td>-21.400000</td>\n",
-       "      <td>-21.400000</td>\n",
-       "      <td>-16.299999</td>\n",
-       "      <td>-19.4</td>\n",
-       "      <td>-14.6</td>\n",
-       "      <td>-12.2</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>1958-01-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-01-07</th>\n",
-       "      <td>0.001000</td>\n",
-       "      <td>-16.200001</td>\n",
-       "      <td>-16.0</td>\n",
-       "      <td>-14.1</td>\n",
-       "      <td>-15.600000</td>\n",
-       "      <td>-15.400000</td>\n",
-       "      <td>-14.500000</td>\n",
-       "      <td>-15.0</td>\n",
-       "      <td>-13.8</td>\n",
-       "      <td>-11.9</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>1958-01-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-01-08</th>\n",
-       "      <td>0.316796</td>\n",
-       "      <td>-7.900000</td>\n",
-       "      <td>-7.8</td>\n",
-       "      <td>-9.5</td>\n",
-       "      <td>-7.600000</td>\n",
-       "      <td>-7.500000</td>\n",
-       "      <td>-8.000000</td>\n",
-       "      <td>-7.4</td>\n",
-       "      <td>-8.6</td>\n",
-       "      <td>-8.2</td>\n",
-       "      <td>9.3</td>\n",
-       "      <td>8.6</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>8.9</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>10.2</td>\n",
-       "      <td>9.3</td>\n",
-       "      <td>10.1</td>\n",
-       "      <td>9.7</td>\n",
-       "      <td>1958-01-08</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                flow      tas_0  tas_1  tas_2      tas_3      tas_4  \\\n",
-       "1958-01-04  1.723781 -10.600000   -9.7   -6.7  -8.800000  -8.900000   \n",
-       "1958-01-05  0.960882 -20.500000  -19.1  -12.0 -17.700001 -17.700001   \n",
-       "1958-01-06  0.001000 -23.600000  -22.5  -15.1 -21.400000 -21.400000   \n",
-       "1958-01-07  0.001000 -16.200001  -16.0  -14.1 -15.600000 -15.400000   \n",
-       "1958-01-08  0.316796  -7.900000   -7.8   -9.5  -7.600000  -7.500000   \n",
-       "\n",
-       "                tas_5  tas_6  tas_7  tas_8  pr_0  pr_1  pr_2  pr_3  pr_4  \\\n",
-       "1958-01-04  -7.500000   -8.1   -6.5   -5.4   0.0   0.0   0.0   0.0   0.0   \n",
-       "1958-01-05 -13.100000  -15.5  -11.8   -9.1   0.0   0.0   0.0   0.0   0.0   \n",
-       "1958-01-06 -16.299999  -19.4  -14.6  -12.2   0.1   0.0   0.3   0.1   0.3   \n",
-       "1958-01-07 -14.500000  -15.0  -13.8  -11.9   1.0   0.0   1.0   1.1   0.9   \n",
-       "1958-01-08  -8.000000   -7.4   -8.6   -8.2   9.3   8.6   8.0   8.9   8.7   \n",
-       "\n",
-       "            pr_5  pr_6  pr_7  pr_8  obs_dates  \n",
-       "1958-01-04   0.0   0.0   0.1   0.1 1958-01-04  \n",
-       "1958-01-05   0.0   0.0   0.2   0.1 1958-01-05  \n",
-       "1958-01-06   0.3   0.4   0.3   0.5 1958-01-06  \n",
-       "1958-01-07   0.7   0.8   0.4   0.6 1958-01-07  \n",
-       "1958-01-08  10.2   9.3  10.1   9.7 1958-01-08  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 'flow', 21542)\n",
+      "(1, 'obs_tas', 21546)\n",
+      "(2, 'flow_dates', 21542)\n",
+      "(3, 'obs_lon_lat', 2)\n",
+      "(4, 'obs_pr', 21546)\n",
+      "(5, 'obs_dates', 21546)\n"
+     ]
     }
    ],
    "source": [
-    "data['obs_dates'] = df6['dates']\n",
-    "data.head()"
+    "length_42=[]\n",
+    "length_46=[]\n",
+    "i=0\n",
+    "for index,column in enumerate(df.keys()):\n",
+    "    print((index, column, len(df[column])))\n",
+    "    \n",
+    "    if len(df[column])== 21542:\n",
+    "        length_42.append(list(df.keys())[index])\n",
+    "    if len(df[column])== 21546:\n",
+    "        length_46.append(list(df.keys())[index])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_list=[]\n",
+    "for name in df.keys(): \n",
+    "    df_temp= pd.DataFrame(df[name])\n",
+    "    if df_temp.shape[1] ==1:\n",
+    "        df_temp.columns=[name]\n",
+    "    else: \n",
+    "        columns=[]\n",
+    "        for index in range(df_temp.shape[1]):\n",
+    "             columns.append(name + \"_\" +str(index))\n",
+    "        df_temp.columns= columns\n",
+    "    df_list.append(df_temp)\n",
+    "    \n",
+    "df_dict= dict(zip(df.keys(), df_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/h4/3w1ndbld1bl7hnc6b9pzsphr0000gn/T/ipykernel_5745/658053753.py:6: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "  df_42= pd.concat([df_42, df_dict[column].reset_index().drop(\"index\", 1)], axis=1)\n",
+      "/var/folders/h4/3w1ndbld1bl7hnc6b9pzsphr0000gn/T/ipykernel_5745/658053753.py:9: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "  df_46= pd.concat([df_46, df_dict[column].reset_index().drop(\"index\", 1)], axis=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_42= df_dict[\"flow\"]\n",
+    "df_46= df_dict[\"obs_tas\"]\n",
+    "\n",
+    "for column in length_42:\n",
+    "    if column != \"flow\":\n",
+    "        df_42= pd.concat([df_42, df_dict[column].reset_index().drop(\"index\", 1)], axis=1)\n",
+    "for column in length_46:\n",
+    "    if column != \"obs_tas\":\n",
+    "        df_46= pd.concat([df_46, df_dict[column].reset_index().drop(\"index\", 1)], axis=1)\n",
+    "\n",
+    "df_46=df_46.set_index(\"obs_dates\")\n",
+    "df_42=df_42.set_index(\"flow_dates\")\n",
+    "data= pd.concat([df_42, df_46], axis=1)\n",
+    "data = data.dropna(axis=0)\n",
+    "data.to_csv(\"data.csv\", index=0)"
    ]
   },
   {
@@ -388,11 +238,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cluster import KMeans\n",
     "\n",
     "K = 2 # Choose the number of clusters for KMeans.\n",
     "\n",
@@ -795,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
