--- a/noaa_ai_workshop/IntroNotebooks/05-Challenge.ipynb
+++ b/noaa_ai_workshop/IntroNotebooks/05-Challenge.ipynb
@@ -1200,7 +1200,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import networkx as nx\n",
+    "from matplotlib.patches import Polygon\n",
+    "from matplotlib.collections import PatchCollection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,6 +1230,17 @@
     "    G.remove_edges_from(nx.selfloop_edges(G))\n",
     "    \n",
     "    return G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = 1\n",
+    "G = create_simplicial_complex(D,r)\n",
+    "nx.draw_kamada_kawai(G)"
    ]
   }
  ],
